; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_ip_fw2_compat.c_ipfw_convert_to_latest.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_ip_fw2_compat.c_ipfw_convert_to_latest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockopt = type { i32 }
%struct.ip_fw = type { i32 }

@EOPNOTSUPP = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ipfw_convert_to_latest(%struct.sockopt* %0, %struct.ip_fw* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.sockopt*, align 8
  %6 = alloca %struct.ip_fw*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.sockopt* %0, %struct.sockopt** %5, align 8
  store %struct.ip_fw* %1, %struct.ip_fw** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %9, align 4
  %10 = load i32, i32* %7, align 4
  switch i32 %10, label %26 [
    i32 129, label %11
    i32 128, label %13
    i32 130, label %25
  ]

11:                                               ; preds = %4
  %12 = load i32, i32* @EOPNOTSUPP, align 4
  store i32 %12, i32* %9, align 4
  br label %28

13:                                               ; preds = %4
  %14 = load i32, i32* %8, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %13
  %17 = load %struct.sockopt*, %struct.sockopt** %5, align 8
  %18 = load %struct.ip_fw*, %struct.ip_fw** %6, align 8
  %19 = call i32 @ipfw_version_one_to_latest_64(%struct.sockopt* %17, %struct.ip_fw* %18, i32* null)
  store i32 %19, i32* %9, align 4
  br label %24

20:                                               ; preds = %13
  %21 = load %struct.sockopt*, %struct.sockopt** %5, align 8
  %22 = load %struct.ip_fw*, %struct.ip_fw** %6, align 8
  %23 = call i32 @ipfw_version_one_to_latest_32(%struct.sockopt* %21, %struct.ip_fw* %22, i32* null)
  store i32 %23, i32* %9, align 4
  br label %24

24:                                               ; preds = %20, %16
  br label %28

25:                                               ; preds = %4
  br label %28

26:                                               ; preds = %4
  %27 = load i32, i32* @EINVAL, align 4
  store i32 %27, i32* %9, align 4
  br label %28

28:                                               ; preds = %26, %25, %24, %11
  %29 = load i32, i32* %9, align 4
  ret i32 %29
}

declare dso_local i32 @ipfw_version_one_to_latest_64(%struct.sockopt*, %struct.ip_fw*, i32*) #1

declare dso_local i32 @ipfw_version_one_to_latest_32(%struct.sockopt*, %struct.ip_fw*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
